[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[workspace]
resolver = "2"
members = ["redis-proc-macros"]

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
rand = "0.9.2"
async-trait = "0.1.89"
futures = "0.3"
hashbrown = "0.16.0"
indexmap = "2.12.0"
